# pw-generator

./: LICENSE  README.md  pyproject.toml
src/pw_generator/: generator.py
src/pwgen/: cli.py  generator.py
