[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pw-generator-cli"
version = "0.1.0"
description = "A simple command-line password generator."
authors = [{name="Antonio Iannotta", email="antonio.iannotta.ai26@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["typer"]

[project.scripts]
pwgen = "pwgen.cli:app"